[metadata]
name = mfpml
version = file: VERSION
description = Probabilistic machine learning methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JiaxiangYi96/mfpml
author = Jiaxiang Yi
author_email = J.Yi@tudelft.nl
license = MIT
keywords = multi-fidelity machine learning, Bayesian Optimization 
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
python_requires = >=3.10, <3.12
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
where = src
exclude =
    docs
    tests
